@@ -426,6 +426,16 @@ UDEB_COMPONENTS
 PRESEED
   An initrd preseed file to put in the initrd.
 
+TRANSSTATUS
+  Location of file with translation statistics. This file is intended to
+  be included only for official releases and thus this variable is set in
+  debian/rules.
+  The file is only included if it exists. A warning will be displayed if
+  the file is older than 2 weeks than the time of the build.
+  If needed, inclusion of the file can be prevented by setting the variable
+  to empty for specific targets (e.g. most floppy images) in config or
+  globally in config/common.
+
 Rules invoked from the various targets:
 
 arch_boot:
