@@ -12,3 +12,4 @@ TYPE = bootfloppy
 OMIT_RELEASE_INFO=1
 
 EXTRAUDEBS=
+TRANSSTATUS=
