@@ -1,0 +1,63 @@
+# Installer translation status generated by the script:
+# scripts/l10n/calc-release-status
+# This file should be updated before every official release.
+# Generated on: Wed, 27 Feb 2008 12:00:00 +0000
+#
+am: 2 P
+ar: 2 M
+be: 2 M
+bg: 5 F
+bn: 2 M
+bs: 2 M
+ca: 5 F
+cs: 5 F
+da: 2 M
+de: 5 F
+dz: 5 F
+el: 2 M
+eo: 5 F
+es: 5 F
+et: 2 M
+eu: 5 F
+fi: 5 F
+fr: 5 F
+gl: 5 F
+gu: 5 F
+he: 5 F
+hi: 5 F
+hr: 2 M
+hu: 2 M
+id: 5 F
+it: 5 F
+ja: 5 F
+ka: 2 M
+km: 5 F
+ko: 5 F
+ku: 2 M
+lt: 5 F
+lv: 5 F
+mk: 2 M
+ml: 5 F
+nb: 5 F
+ne: 5 F
+nl: 5 F
+nn: 5 F
+pa: 2 M
+pl: 5 F
+pt: 5 F
+pt_BR: 5 F
+ro: 5 F
+ru: 5 F
+sk: 5 F
+sl: 5 F
+sq: 2 M
+sv: 5 F
+ta: 5 F
+th: 5 F
+tl: 2 M
+tr: 5 F
+uk: 2 M
+vi: 5 F
+wo: 2 M
+zh_CN: 5 F
+zh_TW: 5 F
